Fix button outline covering text.

--- a/services/app-web/src/components/ExpandableText/ExpandableText.module.scss
+++ b/services/app-web/src/components/ExpandableText/ExpandableText.module.scss
@@ -16,8 +16,8 @@
 .showMoreButton {
     background-color: transparent;
     border: none;
-    padding: 0;
     cursor: pointer;
+    margin-top: 0.50rem;
 }
 
 .container {
